# CV-2

./: CMakeLists.txt
src/: colors.cpp  featureExtraction.cpp  featureExtraction.h  matchImagesBaseline.cpp  matchImagesColorTexture.cpp  matchImagesDeepNetwork.cpp  matchImagesHistogram.cpp  matchImagesMultiHistogram.cpp  readImages.cpp
